# fastapi_crud_starter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: models.py  session.py
app/routers/: items.py
app/schemas/: item.py
dockerfiles/: dockerfile.debug  dockerfile.local
migrations/: env.py
migrations/versions/: 48e990622d09_add_status_field.py  7132989f72ee_my_first_migration.py  cc5eda956633_delete_status_field.py
